After Migrating Zulu, Lima to QA
After Migrating Zulu, Lima to QA

--- a/Server V 1.0/stascore/WEB-INF/src/properties/ldap.properties
+++ b/Server V 1.0/stascore/WEB-INF/src/properties/ldap.properties
@@ -15,4 +15,5 @@ place.member.identifier=placeMember=cn=<replacestr>,ou=places,ou=resources,dc=em
 mission.unique.identifier=uniqueId=<replacestr>,ou=missions,dc=emergency,dc=lu
 device.member.identifier=member=cn=<replacestr>,ou=devices,dc=emergency,dc=lu
 user.member.identifier=member=uid=<replacestr>,ou=users,ou=people,dc=emergency,dc=lu
+organization.search.base=ou=organizationTypes,ou=resourcesTypes,dc=emergency,dc=lu
 
